--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "editor.formatOnSaveMode": "modifications"
+  "editor.formatOnSaveMode": "file",
+  "editor.formatOnSave": true,
+  "files.autoSave": "afterDelay"
 }
